# iplogger-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: get_ip.rs  main.rs  read_file.rs
