[package]
name = "iplogger"
version = "0.1.0"
authors = ["Stef <sstefin@bk.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
dirs = "3.0.1"
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4"